package br.unitins.tp1.dto;

public record CategoriaDTO(
    String nome,
    String descricao
) {}
