package br.unitins.tp1.dto;

public record CorDTO(
    String nome, String descricao
    ) {}
