package br.unitins.tp1.dto;

public record MarcaDTO(
    String nome,
    String paisOrigem,
    Integer anoFundacao,
    String siteOficial,
    String logo
) {}
